--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -80,6 +80,7 @@
 </div>
 
 
+
 <div class="about-seekle-wrapper">
 
    <div class="container">
@@ -176,13 +177,10 @@
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
       <div class="join-button">
-      <%= link_to "プロバイダーとして参加",'/home/pro', class: "btn message signup-show" %>
+      <%= link_to "プロバイダーとして参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
     </div>
     </div>
   </div>
-
-
-
 
 
 
