--- a/app/views/dashboard/transaction.html.erb
+++ b/app/views/dashboard/transaction.html.erb
@@ -3,7 +3,7 @@
  <div class="upper-menu">
     <div class="wrapper" >
     <ul>
-     <li><a href='/users/index'>マイページ</a></li>
+     <li><a href='/users'>マイページ</a></li>
      <li><%= link_to '掲載中', notes_path %></li>
      <li><a href='/dashboard/transaction'>取引方法</a></li>
      <li><a href='/users/edit'>設定</a></li>
