--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -73,7 +73,12 @@
  <h3>所在地： <%= current_user.area %> </h3>
 
  <h3>自己紹介：</h3> <p><%=current_user.profile %>
+<% if current_user.profile.blank? %>
+
+<%= link_to 'プロフィール編集ページ', '/users/edit' %>から設定してください。
+<%end%>
 </p>
+
 
   <h3>お気に入り一覧</h3>
 
