--- a/app/views/company/question.html.erb
+++ b/app/views/company/question.html.erb
@@ -57,8 +57,8 @@
 
    <div class="question">
     <h2>Q4.電話サポートはありますか。</h2>
-    <p>お申込みにあたりご不明な点がございましたら、お気軽に03-6869-5598までお問い合わせください。
-また、お問い合わせについては、info@casy.co.jpもしくはお問い合わせフォームでも受付しております。ご連絡をいただければ、出来る限り迅速な回答をいたします。
+    <p>お申込みにあたりご不明な点がございましたら、お気軽に080-3037-2965までお問い合わせください。
+また、お問い合わせについては、seekle.info@gmail.comもしくはお問い合わせフォームでも受付しております。ご連絡をいただければ、出来る限り迅速な回答をいたします。
 「サポートにも感動を」をコンセプトにサポートチーム一同、お問い合わせをお待ちしております。</p>
   </div>
 
