--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,7 +50,7 @@
   data-width="450"
   data-show-faces="true">
 </div>
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+ <%= link_to image_tag('facebook_login.png'), user_omniauth_authorize_path(:facebook) %>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
