--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -159,8 +159,7 @@
 
 
 
-
-  <div class="copy-right">© SEEKLE inc., All Rights Reseved.</div>
+  <div class="copy-right">© Seekle inc., All Rights Reseved.</div>
 
 
 
