画像表示機能追加

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -7,50 +7,50 @@
 
 
 
-<div class="provider_wrapper">
+ <div class="provider_wrapper">
 
-<div class="service-introduction">
- <div class="service-price_provider">
- <h1><i class="fa fa-jpy "></i> <%= @note.price %>/月</h1>
-  </div>
+   <div class="service-introduction">
+      <div class="service-price_provider">
+         <h1><i class="fa fa-jpy "></i> <%= @note.price %>/月</h1>
+      </div>
 
-  <div class="service_order_btn"><div id="like-link">
-  <%= render "likes/like_links", note: @note %>
+         <div class="service_order_btn"><div id="like-link">
+            <%= render "likes/like_links", note: @note %>
+         </div>
+    <div>
+           <small>
+               <%= link_to @note.likes.count(@note.id), id: "like-count" %>人がキープしています。
+          </small>
+    </div>
+ </div>
+
+
 </div>
-
-<div>
-  <small>
-    <%= link_to @note.likes.count(@note.id), id: "like-count" %>人がキープしています。
-
-  </small>
-</div></div>
-  </div>
 
 
 
 <div class="provider-introduction">
- <%= image_tag("Buq4YUxCcAAISFu.jpg", class: "face_pic")%>
-<h1>  <%= @note.title %></h1>
 
+   <div class="face_pic">
+     <%= @note.user.profile_pic %>
+   </div>
 
+     <h1>  <%= @note.title %></h1>
 
-提供者：<%= @note.user.user_name %><br />
-エリア：<%= @note.user.area %><br />
+      提供者：<%= @note.user.user_name %><br />
+      エリア：<%= @note.user.area %><br />
+      サービスカテゴリー： <%= @note.category %>
 
-
-サービスカテゴリー： <%= @note.category %>
 </div>
 
 
 
 
 
-<div class="service_explain">
-<h2>このサービスについて</h2>
-  <p>  <%= @note.content %></p>
-
-
-  </div>
+ <div class="service_explain">
+   <h2>このサービスについて</h2>
+   <p>  <%= @note.content %></p>
+ </div>
 
 
   <div class="provider_service_pictures">
@@ -61,18 +61,19 @@
     </ul>
   </div>
 
-<div class="rulesfromprovider">
-<h2>プロバイダーからのお願い</h2>
- <ul>
-    <%= @note.rule %>
- </ul>
+  <div class="rulesfromprovider">
+     <h2>プロバイダーからのお願い</h2>
+       <ul>
+         <%= @note.rule %>
+       </ul>
   </div>
 
   <div class="reviews_providers">
-    <h2>レビュー (2)</h2>
+     <h2>レビュー (2)</h2>
   </div>
 
-  </div>
+
+</div>
 
 
 
