画像表示機能追加

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,10 @@
 
 
 
+<%= f.hidden_field :profile_pic, autofocus: true %>
 
+
+<%= f.hidden_field :profile, autofocus: true %>
 
   <div class="field">
     <%= f.label :メールアドレス %><br />
@@ -45,24 +48,9 @@
   </div>
 <% end %>
 
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '862536317192033',
-      xfbml      : true,
-      version    : 'v2.6'
-    });
-  };
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+
+
 <%= render "devise/shared/links"%>
   </div>
 </div>
