--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,7 +21,6 @@
 <div class="customize-setting">
 
 
-
 <h2>一般アカウント設定</h2>
   </div>
 
@@ -33,7 +32,7 @@
 
 <div class="field">
  <%= f.label :プロフィール写真 %><br />
-<%= f.file_field :image, class: "form-control image-field" %>
+<%= f.file_field :profile_pic, class: "form-control image-field" %>
   </div>
 
 
@@ -53,13 +52,12 @@
 <div class="field">
  <%= f.label :自己紹介 %><br />
     <%= f.text_area :profile, autofocus: true, class: 'profile_field' %>
-
-  </div>
+</div>
 
 
   <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true %>
+     <%= f.label :メールアドレス %><br />
+     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -86,6 +84,7 @@
   </div>
 <% end %>
 
+
 <h3>アカウントを削除する</h3>
 
 <p>退会してしまうと現在のデータはすべて削除されます。<%= button_to "退会する", registration_path(resource_name), class: 'btn btn-default', data: { confirm: "本当に退会しますか？" }, method: :delete %></p>
@@ -95,7 +94,6 @@
 
   </div>
   </div>
-
 
 
 
