--- a/app/views/dashboard/transaction.html.erb
+++ b/app/views/dashboard/transaction.html.erb
@@ -7,7 +7,7 @@
      <li><%= link_to '掲載中', notes_path %></li>
      <li><a href='/dashboard/transaction'>取引方法</a></li>
      <li><a href='/users/edit'>設定</a></li>
-     <li><a href='/conversations/new'>受信トレイ</a></li>
+     <li><a href='/conversations/new'>メッセージ</a></li>
     </ul>
     </div>
   </div>
