--- a/app/views/dashboard/transaction.html.erb
+++ b/app/views/dashboard/transaction.html.erb
@@ -1,5 +1,4 @@
 
-
 <div class="up-var">
  <div class="upper-menu">
     <div class="wrapper" >
@@ -8,9 +7,7 @@
      <li><%= link_to '掲載中', notes_path %></li>
      <li><a href='/dashboard/transaction'>取引方法</a></li>
      <li><a href='/users/edit'>設定</a></li>
-     <li><a href='/mailbox/inbox'>メッセージ
-<div class="bootstrap">
- <span class="label label-danger pull-right"><%=unread_messages_count%></span></div></a></li>
+     <li><a href='/conversations/new'>メッセージ</a></li>
     </ul>
     </div>
   </div>
