--- a/app/views/notes/search.html.erb
+++ b/app/views/notes/search.html.erb
@@ -43,67 +43,32 @@
     </div>
 
 
-
-
-
-
-
-
-<div class="show_providers clearfix">
-
-
-<div class="introduce_providers">
-
-
-  <ul>
-    <% @notes.each do |note| %>
-
-
-  <div class="provider_job ">
-
-
-     <%= image_tag "/note_images/#{note.image_1}" ,class: "provider_service_image"%>
-
-
-     <div class="title"><h2> <%= link_to note.title, note_path(note) %></h2>
-
-       <div class="service-price"><h3> ¥<%= note.price %></h3> </div>
-
-
-     <% if note.user.profile_pic? %>
-    <%= image_tag note.user.profile_pic.url, :class => 'provider_image'%>
-  <% else %>
-    <%= image_tag 'logo.png', :class => 'provider_image'%>
-  <% end %>
-
-
-          </div>
-       </div>
-    <% end %>
-
- </ul>
-
-
-
-
-<div class="bootstrap">
- <div class="list-number clearfix">
-  <%= paginate(@notes) %>
+  <div class="show_providers clearfix">
+    <div class="introduce_providers">
+       <ul>
+       <% @notes.each do |note| %>
+      <div class="provider_job ">
+              <%= image_tag "/note_images/#{note.image_1}" ,class: "provider_service_image"%>
+            <div class="title"><h2> <%= link_to note.title, note_path(note) %></h2>
+               <div class="service-price"><h3> ¥<%= note.price %></h3> </div>
+                <% if note.user.profile_pic? %>
+                 <%= image_tag note.user.profile_pic.url, :class => 'provider_image'%>
+               <% else %>
+                <%= image_tag 'Seekle_icon.png', :class => 'provider_image'%>
+               <% end %>
+               </div>
+            </div>
+          <% end %>
+        </ul>
+      <div class="bootstrap">
+       <div class="list-number clearfix">
+         <%= paginate(@notes) %>
+        </div>
+      </div>
+     </div>
+    </div>
   </div>
-  </div>
-  </div>
-
-
-
-  </div>
-
-
-
-
-  </div>
-
-  </div>
-
+</div>
 
 
 
