--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,73 +1,67 @@
 
 
 <div class="up-var">
- <div class="upper-menu">
+  <div class="upper-menu">
     <div class="wrapper" >
-    <ul>
-     <li><a href='/users'>マイページ</a></li>
-     <li><%= link_to '掲載中', notes_path %></li>
-     <li><a href='/dashboard/transaction'>取引方法</a></li>
-     <li><a href='/users/edit'>設定</a></li>
-     <li><a href='/mailbox/inbox'>メッセージ
-<div class="bootstrap">
- <span class="label label-danger pull-right"><%=unread_messages_count%></span></div></a></li>
-    </ul>
+      <ul>
+        <li><a href='/users'>マイページ</a></li>
+        <li><%= link_to '掲載中', notes_path %></li>
+        <li><a href='/dashboard/transaction'>取引方法</a></li>
+        <li><a href='/users/edit'>設定</a></li>
+        <li><a href='/mailbox/inbox'>メッセージ
+      <div class="bootstrap">
+        <span class="label label-danger pull-right"><%=unread_messages_count%></span></div></a></li>
+      </ul>
     </div>
   </div>
-  </div>
-
-
+</div>
 
 <div class="mypage-all_wrapper">
-<div class="left-wrapper">
-
-
+ <div class="left-wrapper">
   <% if current_user.profile_pic? %>
     <%= image_tag current_user.profile_pic.url, :class => 'mypage-picture'%>
   <% else %>
-    <%= image_tag 'logo.png', :class => 'mypage-picture'%>
+    <%= image_tag 'Seekle_icon.png', :class => 'mypage-picture'%>
   <% end %>
 
-
- <div class="security-wrapper">
-   <div class="bootstrap">
+   <div class="security-wrapper">
+    <div class="bootstrap">
      <div class="profilelink">
        <ul class="nav nav-pills">
          <li role="presentation" ><a href="/users/edit">プロフィールを編集</a></li>
        </ul>
-      </div>
-
+     </div>
  <!-- Large button group -->
- <div class="panel panel-default">
-    <div class="panel-heading">
-       <h3 class="panel-title">セキュリティー承認</h3>
-    </div>
-      <div class="panel-body">
-         Facebook承認
+       <div class="panel panel-default">
+          <div class="panel-heading">
+           <h3 class="panel-title">セキュリティー承認</h3>
+          </div>
+            <div class="panel-body">
+             Facebook承認
+            </div>
+             <div class="panel-body">
+               パスポート
+             </div>
+               <div class="panel-body">
+                 身分証明書
+              </div>
+         </div>
      </div>
-     <div class="panel-body">
-       パスポート
-    </div>
-       <div class="panel-body">
-         身分証明書
-       </div>
-     </div>
-   </div>
   </div>
 </div>
 
 
-<div class="mypage_wrapper">
-  <h1><%= current_user.user_name %>さんのページ</h1>
-  <h3>所在地： <%= current_user.area %> </h3>
-  <h3>自己紹介：</h3> <p><%=current_user.profile %>
-   <% if current_user.profile.blank? %>
-    <%= link_to 'プロフィール編集ページ', '/users/edit' %>から設定してください。
-   <%end%>
-  </p>
-   <h3>お気に入り一覧</h3>
-   <ul class="notes">
-   </ul>
+ <div class="mypage_wrapper">
+   <h1><%= current_user.user_name %>さんのページ</h1>
+    <h3>所在地： <%= current_user.area %> </h3>
+    <h3>自己紹介：</h3> <p><%=current_user.profile %>
+     <% if current_user.profile.blank? %>
+      <%= link_to 'プロフィール編集ページ', '/users/edit' %>から設定してください。
+     <%end%>
+    </p>
+      <h3>お気に入り一覧</h3>
+       <ul class="notes">
+      </ul>
 </div>
 
 
