--- a/app/assets/stylesheets/housing/housing.scss
+++ b/app/assets/stylesheets/housing/housing.scss
@@ -137,111 +137,9 @@ height:600px;
 
 .panel-body-housing{
   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2014/06/30/12/24/pigeon-380221_960_720.jpg)
-}
-
-
-.panel-body-housing-90{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2015/08/16/18/22/repair-891422_960_720.jpg)
-}
-
-
-.panel-body-housing-91{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2015/09/29/22/49/blueprint-964630_960_720.jpg)
-}
-
-.panel-body-housing-92{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2015/07/09/21/47/concrete-838614_960_720.jpg)
-}
-
-.panel-body-housing-93{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2015/09/05/08/12/painting-924144_960_720.jpg)
-}
-
-.panel-body-housing-94{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2014/02/12/15/33/roof-plate-264744_960_720.jpg)
-}
-
-.panel-body-housing-95{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2015/02/19/06/25/floor-truss-641787_960_720.jpg)
-}
-
-.panel-body-housing-96{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2015/05/15/14/48/house-768707_960_720.jpg)
-}
-
-
-.panel-body-housing-97{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2014/02/17/13/34/cleaning-268126_960_720.jpg)
-}
-
-.panel-body-housing-98{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2014/06/30/12/24/pigeon-380221_960_720.jpg)
-}
-
-.panel-body-housing-99{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2016/04/18/19/57/crosscut-saw-1337288_960_720.jpg)
-}
-
-.panel-body-housing-100{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2013/12/13/21/13/plumber-228010_960_720.jpg)
-}
-
-
-.panel-body-housing-101{
-   height:120px;
-  background-size: cover;
-  background-image: url(https://pixabay.com/static/uploads/photo/2014/06/30/12/24/pigeon-380221_960_720.jpg)
-}
-
-
-.main-story{
-
-  float: left;
-
-   height:358px;
-   width:300px;
-  margin:11px;
-  border:2px solid gray;
-
+ width:100%
 
 }
-
-
-.hoge{
-  border:0;
-padding:10px;
-font-size:1.3em;
-font-family:Arial, sans-serif;
-color:#aaa;
-border:solid 1px #ccc;
-margin:0 0 20px;
-width:300px;
-}
-
 
 
 
