--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -19,7 +19,6 @@
 
 
 
-
 <div class="explain-seekle-wrapper">
  <div class="container">
     <div class="Seekle-heading">
@@ -66,17 +65,13 @@
 
 
 
-
-
-
-
   <div class="message-wrapper">
     <div class="container">
       <div class="heading">
         <h2>あなたもプロバイダーとして参加しませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
-      <%= link_to "プロバイダーとして参加",new_user_registration_path , class: "btn message signup-show" %>
+      <%= link_to "プロバイダーとして参加",'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn message signup-show" %>
     </div>
   </div>
 
