--- a/app/views/housing/event.html.erb
+++ b/app/views/housing/event.html.erb
@@ -34,8 +34,7 @@
        <div class="panel-heading">
         <h3 class="panel-title"><%= link_to "イベントメイクアップ","/notes/search" %></h3>
        </div>
-    <div class="panel-body-housing-10">
-    </div>
+    <%= image_tag 'makeup.png', :class => 'panel-body-housing', :size => 'cover'%>
        </div>
          </li>
   </div>
@@ -46,9 +45,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "結婚司会","/notes/search" %></h3>
   </div>
-        <div class="panel-body-housing-11">
-
-      </div>
+         <%= image_tag 'bouquet.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -60,9 +57,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バーテンディング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-12">
-
-      </div>
+        <%= image_tag 'cocktails.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -73,9 +68,7 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "フラワーデザイナー","/notes/search" %></h3>
  </div>
-        <div class="panel-body-housing-13">
-
-      </div>
+         <%= image_tag 'floral-arrangement.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -87,9 +80,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "マジシャン","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-14">
-
-      </div>
+         <%= image_tag 'magicianhat.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -100,9 +91,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "イベントカメラマン","/notes/search" %></h3>
      </div>
-   <div class="panel-body-housing-15">
-
-      </div>
+       <%= image_tag 'camera.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -114,9 +103,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "フェイスペインティング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-16">
-
-      </div>
+        <%= image_tag 'facepaint.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -130,9 +117,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ヘアスタイリング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-17">
-
-      </div>
+       <%= image_tag 'bride.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -142,9 +127,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バルーンアーティスト","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-18">
-
-      </div>
+        <%= image_tag 'shoes.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -154,9 +137,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "コメディアン","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-19">
-
-      </div>
+      <%= image_tag 'microphone.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -166,9 +147,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "DJ","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-20">
-
-      </div>
+       <%= image_tag 'record.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -180,9 +159,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-21">
-
-      </div>
+      <%= image_tag 'eyeshadow.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
  </ul>
