--- a/app/views/housing/index.html.erb
+++ b/app/views/housing/index.html.erb
@@ -41,9 +41,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
   </div>
-      <div class="panel-body-housing-90">
-
-      </div>
+  <%= image_tag 'repair.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -54,9 +52,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "増設、リモデル","/notes/search" %></h3>
   </div>
-        <div class="panel-body-housing-91">
-
-      </div>
+       <%= image_tag 'blueprint.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -68,9 +64,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "コンクリート","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-92">
-
-      </div>
+        <%= image_tag 'concrete.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -81,9 +75,7 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "ペインティング","/notes/search" %></h3>
  </div>
-        <div class="panel-body-housing-93">
-
-      </div>
+   <%= image_tag 'painting.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -95,9 +87,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "屋根、雨漏り","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-94">
-
-      </div>
+      <%= image_tag 'roof.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -108,13 +98,10 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "壁、階段、フレーミング","/notes/search" %></h3>
      </div>
-   <div class="panel-body-housing-95">
-
-      </div>
+ <%= image_tag 'floor.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
-
 
 
   <div class="bootstrap">
@@ -122,9 +109,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ドア、窓","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-96">
-
-      </div>
+    <%= image_tag 'window.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -138,9 +123,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "クリーニング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-97">
-
-      </div>
+    <%= image_tag 'cleaning.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -150,9 +133,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "引っ越し","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-98">
-
-      </div>
+    <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -162,9 +143,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "大工、木工","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-99">
-
-      </div>
+   <%= image_tag 'crosscut.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -174,9 +153,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "配管工事","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-100">
-
-      </div>
+   <%= image_tag 'plumber.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -188,9 +165,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-101">
-
-      </div>
+    <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
  </ul>
