--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -29,7 +29,7 @@
 <header>
 
   <div class="container_head">
-    <a href="/"><%= image_tag('logo.png',class: 'logo')  %></a>
+    <a href="/"><%= image_tag('logo-min.png',class: 'logo')  %></a>
 
 
 
@@ -128,11 +128,6 @@
 
         </div>
           </footer>
-
-
-
-
-
 
 
 
