--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -123,7 +123,7 @@
       <div class="images">
         <div class="first">
           <div class="first-icon">
-           <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="300" height="212" border="0" />
+           <%= image_tag 'one.png'%>
 
           </div>
 
@@ -135,7 +135,8 @@
 
     <div class="first">
       <div class="first-icon">
-        <img src="http://gahag.net/img/201602/14s/gahag-0055980653-1.jpg" alt="Second" width="300" height="212" border="0" />
+ <%= image_tag 'two.png' %>
+
       </div>
 
 
@@ -149,7 +150,7 @@
 
      <div class="first">
         <div class="first-icon">
-          <img src="http://www.cambiandoelnorte.com/wp-content/uploads/2016/01/photo-1453127370373-a52c2f02c097.jpeg" alt="Third" width="300" height="212" border="0" />
+        <%= image_tag 'three.png' %>
         </div>
          <div class="how-works-explain">
           <h3>3. 依頼しよう</h3>
@@ -160,9 +161,6 @@
 
     </div>
   </div>
-
-
-
 
 
   <div class="message-wrapper">
@@ -176,8 +174,4 @@
     </div>
     </div>
   </div>
-
-
-
-
 
