--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
   <% if current_user.profile_pic? %>
     <%= image_tag current_user.profile_pic.url, :class => 'mypage-picture'%>
   <% else %>
-    <%= image_tag 'Seekle_icon.png', :class => 'mypage-picture'%>
+    <%= image_tag 'Seekle_icon-min.png', :class => 'mypage-picture'%>
   <% end %>
 
    <div class="security-wrapper">
