--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
   <title>Seekle</title>
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
+      <%= csrf_meta_tags %>
+       <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+         <script src="jquery.js"></script>
+         <script src="jquery.steps.js"></script>
+           <body class="fuelux">
+         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+          <script src="./jquery.lazyload.js"></script>
+           <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">
+          <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
+         <script>
+jQuery(function($){
+  $("img.lazy").lazyload();
+});
+</script>
 
-       <script src="jquery.js"></script>
-        <script src="jquery.steps.js"></script>
-        <body class="fuelux">
-
-<link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">
-        <!-- jQuery -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-
-<script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
- <link rel="stylesheet" href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
-</head>
-  <body>
+ </head>
+<body>
 
 <header>
-
   <div class="container_head">
     <a href="/"><%= image_tag('logo-min.png',class: 'logo')  %></a>
 
