--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,8 +1,8 @@
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <body class="fuelux">
 <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">
 <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  </body>
 
 <div class="bootstrap">
 
