index.cssがすべてのファイルに適用されていたorz

--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -84,3 +84,112 @@
 }
 
 
+
+@media screen and  ( max-width:640px )
+{
+  .lesson-wrapper{
+    height:1130px;
+
+  }
+  .images{
+    padding-top: 10%;
+
+  }
+
+  .first {
+  clear:both;
+  padding-left: 12%;
+    }
+
+.how-works-explain{
+  width: 300px;
+  padding-bottom: 20px;
+}
+
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 374px)
+{
+.first{
+padding-left:0px;
+}
+}
+
+
+
+@media screen and  ( max-width:640px )
+{
+
+  .reasons {
+    font-size:60%;
+    clear:both;
+    padding-top: 20px;
+    padding-right:21px;
+
+  }
+  .reason  {
+    display: inline-block;
+    font-size: 10px;
+     line-height:14px;
+      width:110%;
+
+  }
+
+  .about-seekle-wrapper{
+    height:750px;
+
+ }
+
+
+}
+
+
+
+@media screen and (max-width:479px)
+{
+
+.about-seekle-wrapper{
+    height:900px;
+
+ }
+}
+
+
+
+
+@media screen and  ( max-width:640px )
+{
+
+  .wrapper{
+   width:auto;
+  position:relative;
+  margin-left:-22px;
+    max-width:640px;
+  }
+
+  .explain-seekle-wrapper p{
+    font-size:9px;
+  }
+
+}
+
+
+@media only screen and  ( max-width:640px )
+{
+  .body{
+    position: relative;
+  }
+  /* ボディ */
+  .background-image
+  {
+    float:left;
+  }
+  .top-wrapper{
+    padding: 80px 0 100px 0px;
+  }
+  .top-wrapper h1 {
+   text-shadow: 2px 2px 1px black;
+  }
+}
+
