--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -4,11 +4,10 @@
   <title>Seekle</title>
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true  %>
+       <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
       <%= csrf_meta_tags %>
        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-         <script src="jquery.js"></script>
 
          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
