notes/newだけにjs読み込み

--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,4 +1,6 @@
+
  <body class="fuelux">
+  <%= javascript_include_tag "application" %>
 <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">
 <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
