bootstrapの読み込み位置 変更

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,91 +1,51 @@
-
-
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-
-
-
  <div class="top-wrapper">
-    <div class="container">
-      <div class="background-image">
+  <div class="container">
+   <div class="background-image">
+    <a img="https://static.pexels.com/photos/7075/people-office-group-team.jpg">
+     </a>
+      </div>
+       <h1>登録費無料の簡単サービス依頼</h1>
+       <p>あなたの求める全てのサービスがここに集まります</p>
 
-       <a img="https://static.pexels.com/photos/7075/people-office-group-team.jpg">
-       </a>
-     </div>
-      <h1>登録費無料の簡単サービス依頼</h1>
+   <div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
+  </div>
+ </div>
 
-      <p>あなたの求める全てのサービスがここに集まります</p>
+ <div id="fade-in2" class="dropmenu">
+  <div class="wrapper" >
+   <ul>
+    <li><a href="/housing/index"><i class="fa fa-home fa-fw"></i>住まい</a></li>
+    <li><a href="/housing/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
+    <li><a href="/housing/index"><i class="fa fa-book fa-fw"></i>習い事</a></li>
+    <li><a href="/housing/index"><i class="fa fa-heart fa-fw"></i>健康</a></li>
+    <li><a href="/housing/index"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
+   </ul>
+  </div>
+ </div>
 
-
-
-
- <div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
-
-
-
-
-    </div>
-
-
-
-
-
-    </div>
-
-
-
-
-
-  <div id="fade-in2" class="dropmenu">
-    <div class="wrapper" >
-    <ul>
-      <li><a href="/housing/index"><i class="fa fa-home fa-fw"></i>住まい</a>
-
-      </li>
-      <li><a href="/housing/event">
-<i class="fa fa-glass fa-fw"></i>イベント</a>
-
-      </li>
-      <li><a href="/housing/index"><i class="fa fa-book fa-fw"></i>習い事</a>
-
-      </li>
-      <li><a href="/housing/index"><i class="fa fa-heart fa-fw"></i>健康</a>
-
-      </li>
-      <li><a href="/housing/index"><i class="fa fa-list-ul fa-fw"></i>その他</a>
-
-      </li>
-    </ul>
+ <div class="explain-seekle-wrapper">
+  <div class="container">
+   <div class="Seekle-heading">
+    <h2>これからのあなたの新しい暮らしかた</h2>
+     <p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービです。</p>
     </div>
   </div>
-
-
-
-
-
-<div class="explain-seekle-wrapper">
- <div class="container">
-    <div class="Seekle-heading">
-     <h2>これからのあなたの新しい暮らしかた</h2>
-      <p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービです。</p>
-    </div>
-  </div>
-</div>
-
+ </div>
 
 
 <div class="about-seekle-wrapper">
-
-   <div class="container">
-     <div class="reasons">
-       <div class="reason">
-       <div class=icons>
-       <i class="fa fa-users fa-5x"></i>
+  <div class="container">
+   <div class="reasons">
+    <div class="reason">
+     <div class=icons>
+      <i class="fa fa-users fa-5x"></i>
      </div>
-        <p class="txt-contents"></p><h2>プロバイダーとは</h2>
-<p>サービスを提供する提供者です。プロフィール、レビュー、サービス価格などの様々な情報から、ぴったりなプロバイダーを比較できます。</p>
-        </div>
+  <p class="txt-contents"></p><h2>プロバイダーとは</h2>
+  <p>サービスを提供する提供者です。プロフィール、レビュー、サービス価格などの様々な情報から、ぴったりなプロバイダーを比較できます。</p>
+    </div>
   </div>
      <div class="reasons">
        <div class="reason">
