--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,16 @@
 
 
 
+.bootstrap {
+  @import "bootstrap";
+  margin:0 38px 0 38px;
+}
+
+.bootstrap1{
+ @import "bootstrap";
+}
+
+.bootstrap1 label{
+  font-weight: normal;
+}
+
