--- a/app/views/housing/index.html.erb
+++ b/app/views/housing/index.html.erb
@@ -29,21 +29,16 @@
 
   <h2>住まい ジャンル</h2>
 
-
-
-
    <div class="categories">
-     <ul>
+    <ul>
+      <div class="bootstrap">
+       <li><div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
+      </div>
 
-
-<div class="bootstrap">
-   <li><div class="panel panel-default">
-   <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
-  </div>
-  <%= image_tag 'repair.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
-  </li>
+     </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
@@ -146,5 +141,10 @@
  </div>
 
 
-
+<script>
+$( function()
+{
+  $( 'img.lazy' ).lazyload() ;
+} ) ;
+  </script>
 
