--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -13,7 +14,8 @@
  *= require_tree .
  *= require_modernizr
  *= require_self
- *= require chosen
+ *= require jquery-ui
+  *= require chosen
 */
 
 
