--- a/app/assets/stylesheets/housing/housing.css
+++ b/app/assets/stylesheets/housing/housing.css
@@ -1,145 +1,1 @@
-
-
-
-.up-var{
-    padding-top:57px;
-
-}
-
-.upper-menu {
-    text-align: center;
-
-    height: 50px;
-    cursor: pointer;
-    margin-top: -43px;
-      margin-left: -170px;
-  border-top: 2px solid rgb(235, 235, 235);
-    border-bottom: 2px solid rgb(235, 235, 235);
-    transition: all 0.5s;
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
-}
-
-.upper-menu ul li {
-  margin-top: 16px;
-
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 700;
-    width: 13%;
-    float: left;
-    box-sizing: border-box;
-    border-right: 1px solid rgb(235, 235, 235);
-    overflow: hidden;
-
-}
-.upper-menu ul li:hover{
-    color:gray;
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
-}
-
-
-
-.home-all-wrapper{
-  position:relative;
-  height:1000px;
-}
-
-
-.top_home_page{
-     height:280px;
-    width:2000px;
-    position:relative;
-    background-color:   #F5F5F5;
-}
-
-
-
-.top_home_page h1{
- position: absolute;
-    right: 550px;
-    bottom: 100px;
-   font-size:50px;
-   margin-right: 730px;
-}
-
-.top_home_page h3{
-    font-size:15px;
-position: absolute;
-    right: 450px;
-    bottom: 80px;
-margin-right: 730px;
-}
-
-
-.home_pictures_wrapper {
-  text-align: left;
-}
-.home_pictures_wrapper h1{
-  color:  #696969;
-  margin-left: 100px;
-  padding-top:30px;
-  padding-bottom:10px;
-}
-
-.home_pictures{
-  margin-left:144px;
-}
-
-
-.home_pictures p{
-  text-align: center;
-  text-rendering:optimizeLegibility;
-  width:70%;
-  margin:0 auto;
-}
-
-
-.pic {
-    float: left;
-    width: 0px auto;
-    margin:4px;
-}
-
-
-
-
-.home-all-wrapper h2{
-  margin-left: 154px;
-}
-
-.categories ul{
-        margin-left:92px;
-
-}
-
-.categories ul li{
-   height:140px;
-  margin-top:30px ;
-   margin-left: 10px; padding:3px;
-   float: left;
-   width: 21%;
-   list-style: none;
-   font-size: 17px;
-   border-radius: 4px;
-}
-
-
-
-.home-story-wrapper{
-height:600px;
-}
-
-
-.home-story{
-   margin-left: 109px;
-   padding-top:25px;
-}
-
-.panel-body-housing{
-  height:120px;
- width:100%
-
-}
-
-
-
+.upper-menu,.upper-menu ul li:hover{-webkit-tap-highlight-color:transparent}.categories ul li,.details{list-style:none;float:left}.genre,.top_home_page{background-color:#F5F5F5}.up-var{padding-top:57px}.upper-menu{text-align:center;height:50px;cursor:pointer;margin-top:-43px;margin-left:-170px;border-top:2px solid #ebebeb;border-bottom:2px solid #ebebeb;transition:all .5s}.upper-menu ul li{margin-top:16px;text-transform:uppercase;font-size:14px;font-weight:700;width:13%;float:left;box-sizing:border-box;border-right:1px solid #ebebeb;overflow:hidden}.upper-menu ul li:hover{color:gray}.home-all-wrapper{position:relative;height:1000px}.top_home_page{height:280px;width:2000px;position:relative}.top_home_page h1,.top_home_page h3{position:absolute;margin-right:730px}.top_home_page h1{right:550px;bottom:100px;font-size:50px}.top_home_page h3{font-size:15px;right:450px;bottom:80px}.home_pictures_wrapper{text-align:left}.home_pictures_wrapper h1{color:#696969;margin-left:100px;padding-top:30px;padding-bottom:10px}.home_pictures{margin-left:144px}.home_pictures p{text-align:center;text-rendering:optimizeLegibility;width:70%;margin:0 auto}.pic{float:left;width:0 auto;margin:4px}.home-all-wrapper h2{margin-left:154px}.categories ul{margin-left:92px}.categories ul li{height:140px;margin-top:30px;margin-left:10px;padding:3px;width:21%;font-size:17px;border-radius:4px}.home-story-wrapper{height:600px}.home-story{margin-left:109px;padding-top:25px}.panel-body-housing{height:120px;width:100%}.services-detail-wrapper{margin:39px}.services-detail-wrapper h2{border-bottom:1px solid #006400;margin:60px;padding-top:10px}.dynamic-row{padding:10px 0 20px;display:block;width:100%;margin:30px}.dynamic-row li{line-height:17px}.details{display:inline;height:200px;width:30%}.genre{margin-top:20px;width:100%;height:40px;border-bottom:1px solid #F5F5F5}.genre p{padding-left:20px;font-size:14px}.left-other-housing{float:left;width:240px;height:1000px;display:block;clear:both;margin-top:0}.other-jobs-menu{margin:54px 30px;line-height:30px}.other-jobs-menu ul li{color:#696969}.find-wrapper{float:right}.search-provider{margin-right:30px;margin-top:26px;float:left;width:1000px;height:1800px}.create_requirement{margin-top:10px;margin-left:32px}.date,.gender,.price{margin-bottom:30px;margin-top:10px}.provider_service_image{width:290px;height:190px;margin-bottom:10px;float:left}.provider_job{height:400px;border:1px solid gray;width:290px;position:relative;margin-top:10px;margin-bottom:18px;margin-left:40px;float:left}.face_pic,.provider_image{border-radius:100%;float:left}.provider_job h3{margin-top:30px;float:left}.provider_job p{font-size:13px;line-height:20px;text-align:center}.title h2{margin-top:10px;font-size:19px;text-align:center}.provider_image{background-color:gray;height:70px;width:70px;margin-bottom:30px;margin-left:210px;margin-top:-50px}.show_providers{margin-top:50px;padding-top:20px}.service-price{font-weight:1px}.clearfix:after{content:"";display:block;clear:both}.footer-bottom{clear:both}.provider_wrapper{width:100%;margin-top:0;height:1400px}.provider-introduction{float:left;background-color:#fff;width:70%;height:250px;border-bottom:1px solid gray;display:block}.provider-introduction h1 p{float:left;padding-right:80px;padding-top:50px}.face_pic{background-color:gray;width:160px;height:160px;margin-left:30px;margin-top:30px;margin-right:40px}.service-introduction{background-color:#fff;width:30%;height:400px;border:1px solid gray;position:fixed;top:40;right:0;bottom:auto;left:auto;margin-left:910px}.service_order_btn{width:230px;font-size:22px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:1px 0 5px;cursor:pointer;border:1px solid #333;color:#fff;background-color:#6495ED;box-shadow:2px 2px #555;margin-top:180px;margin-left:76px}.provider_service_pictures,.reviews_providers,.rulesfromprovider,.service_explain{float:left;border-bottom:1px solid gray}.service_order_btn:active{box-shadow:0 0 #555;margin-top:185px}.service-price_provider h1{color:#fff;text-align:center;font-size:40px;padding-top:28px}.service-price_provider{background-color:orange;margin-top:-27px;height:100px}.fa-jpy{padding-right:16px;font-size:46px}.service_explain{height:280px;width:70%;background-color:#F5F5F5}.service_explain p{line-height:24px;margin:30px}.service_explain h3{margin-left:750px;margin-top:60px}.provider_service_pictures{width:73%;height:420px;background-color:#fff;margin-left:-30px}.service_pic{float:left;width:270px;height:300px;background-color:#000;margin-top:60px;margin-left:15px}.rulesfromprovider{width:70%;height:270px;background-color:#F5F5F5}h2{margin-left:20px;margin-top:30px;font-size:25px}.rulesfromprovider ul li{list-style-type:circle;margin-left:30px}.reviews_providers{width:100%;height:250px;background-color:#fff}
